--- a/form.html
+++ b/form.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+ 
+  <div class="bg-img flex-global-container">
+    <div class="flex-background-left">
+
+    </div>
+    <div class="flex-background-right">
+      
+    </div>
+  </div>
+
+
+  
+  <!-- Photo by <a href="https://unsplash.com/@stteee?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stephen H</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
   
 </body>
 </html>
