fix logo & credits positionning

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="bg-img flex-global-container">
     <div class="flex-background-left">
       <div class="odin-logo"><img src="img/odin-lined.png" alt="white logo for the Odin Project"> The Odin Project</div>
-      <div>Photo by <a href="https://unsplash.com/@stteee?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stephen H</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
+      <div class="photo-credits">Photo by <a href="https://unsplash.com/@stteee?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Stephen H</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></div>
     </div>
     <form action="http://httpbin.org/post" method="post">
       <div class="flex-background-right">
         <div class="flex-right-top">
-          <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started. &#x2714;</p>
+          <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
           <p>You <em>know</em> you want to.</p></div>
         <div class="flex-right-center">
           <fieldset>Please fill out this form (all fields are required)
